--- a/parameters.yml
+++ b/parameters.yml
@@ -1,6 +1,6 @@
 deployment-name: sample
 bosh-uuid: ac3304f5-908a-446e-8b88-5a81ed349298
-stemcell-alias: bosh-aws-xen-hvm-ubuntu-trusty-go_agent
+stemcell-alias: bosh-aws-xen-hvm-ubuntu-xenial-go_agent
 vm-type: t2.medium
 az-name: us-east-1c
 network-name: infra
@@ -8,5 +8,5 @@ release-name: sample-bootapp-release
 job-name: bootapp
 listen-port: 8080
 release-version: 1.0.0
-cf-deployment-name: cf-827383743403 # ERT deployment name
-app-fqdn: timetracking.sys.cfapps.io  # system domain register with GoRouter
+cf-deployment-name: cf-226240e7e1bda6fc9823 # ERT deployment name
+app-fqdn: timetracking.sys.aws.pcfapps.org  # system domain register with GoRouter
