--- a/sample-manifest-w-route-registrar.yml
+++ b/sample-manifest-w-route-registrar.yml
@@ -12,7 +12,7 @@ releases:
 
 stemcells:
   - alias: ((stemcell-alias))
-    os: ubuntu-trusty
+    os: ubuntu-xenial
     version: latest
 
 instance_groups:
