--- a/sample-manifest.yml
+++ b/sample-manifest.yml
@@ -10,7 +10,7 @@ releases:
 
 stemcells:
   - alias: ((stemcell-alias))
-    os: ubuntu-trusty
+    os: ubuntu-xenial
     version: latest
 
 instance_groups:
